css/screen.css
/* ... */
    .content-viewer--slide-down .content-viewer__controls {
      -webkit-transition: all 0.35s;
              transition: all 0.35s;
      opacity: 0; }
  .content-viewer--slideOut-next, .content-viewer--slideOut-back, .content-viewer--slideIn-next, .content-viewer--slideIn-back {
    overflow: hidden; }
    .content-viewer--slideOut-next .content-viewer__container, .content-viewer--slideOut-back .content-viewer__container, .content-viewer--slideIn-next .content-viewer__container, .content-viewer--slideIn-back .content-viewer__container {
      -webkit-transition: all 0.4s;
              transition: all 0.4s;
      opacity: 0; }
    .content-viewer--slideOut-next .content-viewer__heading, .content-viewer--slideOut-back .content-viewer__heading, .content-viewer--slideIn-next .content-viewer__heading, .content-viewer--slideIn-back .content-viewer__heading {
      color: rgba(102, 102, 102, 0); }
  .content-viewer--slideOut-back .content-viewer__container, .content-viewer--slideIn-next .content-viewer__container {
    -webkit-transform: translate(100px, 0);
        -ms-transform: translate(100px, 0);
            transform: translate(100px, 0); }
  .content-viewer--slideIn-back .content-viewer__container, .content-viewer--slideOut-next .content-viewer__container {
    -webkit-transform: translate(-100px, 0);
        -ms-transform: translate(-100px, 0);
            transform: translate(-100px, 0); }

.section--branding__grid {
  overflow: hidden;
  list-style: none;
  text-align: center;
  margin: 0 -10px; }

/* Common style */
.section--branding__grid-item-sizer {
  height: 0;
  padding-bottom: 100%; }

.section--branding__grid-item {
  position: relative;
  margin: 10px;
  z-index: 1;
  float: left;
  overflow: hidden;
  width: -webkit-calc(25% - ( 10px * 2) );
  width: calc(25% - ( 10px * 2) );
  text-align: center;
  cursor: pointer; }
  @media (max-width: 700px) {
    .section--branding__grid-item {
      width: -webkit-calc(33.3% - ( 10px * 2) );
      width: calc(33.3% - ( 10px * 2) ); } }
  @media (max-width: 550px) {
    .section--branding__grid-item {
      width: -webkit-calc(50% - ( 10px * 2) );
      width: calc(50% - ( 10px * 2) ); } }
  @media (max-width: 350px) {
    .section--branding__grid-item {
      width: -webkit-calc(100% - ( 10px * 2) );
      width: calc(100% - ( 10px * 2) ); } }

.section--branding__grid-item__img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  width: 100%;
  -webkit-transition: -webkit-transform 0.5s;
          transition: transform 0.5s;
  -webkit-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1); }

.section--branding__grid-item__text {
  font-family: "Aleo", "Helvetica Neue", "Roboto", Helvetica, sans-serif;
  color: #fff;
  font-weight: 300;
  -webkit-font-smoothing: antialiased; }
  .section--branding__grid-item__text::before {
    position: absolute;
    content: "";
    display: block;
    width: 200%;
    height: 200%;
    border-radius: 50%;
    left: -50%;
    top: -50%;
    -webkit-transform: scale(0);
        -ms-transform: scale(0);
            transform: scale(0);
    -webkit-transition: all 0.25s;
            transition: all 0.25s;
    background-color: rgba(51, 51, 51, 0.5); }

.section--branding__grid-item__text,
.section--branding__grid-item__a {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%; }

/* Anchor will cover the whole item by default */
/* For some effects it will show as a button */
.section--branding__grid-item__a {
  z-index: 1000;
  text-indent: 200%;
  white-space: nowrap;
  font-size: 0; }

.section--branding__grid-item__head {
  font-weight: 300;
  height: 100%;
  border-radius: 50%;
  padding: 20px;
  opacity: 0;
  color: #fff;
  -webkit-transform: scale(0);
      -ms-transform: scale(0);
          transform: scale(0);
  -webkit-transition: all 0.35s;
          transition: all 0.35s;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center; }

.section--branding__grid-item__head,
.section--branding__grid-item__p {
  margin: 0; }

.section--branding__grid-item__p {
  letter-spacing: 1px;
  font-size: 68.5%;
  opacity: 0;
  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
          transition: opacity 0.35s, transform 0.35s;
  margin: 0 auto;
  max-width: 200px;
  -webkit-transform: scale(1.5);
      -ms-transform: scale(1.5);
          transform: scale(1.5); }

.section--branding__grid-item:hover .section--branding__grid-item__head {
  opacity: 1;
  -webkit-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1); }

.section--branding__grid-item:hover .section--branding__grid-item__p {
  opacity: 1;
  -webkit-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1); }

.section--branding__grid-item:hover .section--branding__grid-item__img {
  opacity: 1;
  -webkit-transform: scale(1.4);
      -ms-transform: scale(1.4);
          transform: scale(1.4); }

.section--branding__grid-item:hover .section--branding__grid-item__text:before {
  -webkit-transform: scale(1);
      -ms-transform: scale(1);
          transform: scale(1);
  background-color: #333333; }

.img-flex {
  display: block;
  width: 100%; }

.shadow-effect {
  border-style: solid;
  border-width: 0px 0px 10px;
  -webkit-border-image: url(../img/chrome/ellipse-shadow.png) 0 0 40 stretch;
       -o-border-image: url(../img/chrome/ellipse-shadow.png) 0 0 40 stretch;
          border-image: url(../img/chrome/ellipse-shadow.png) 0 0 40 stretch;
  margin-bottom: -10px; }
/* ... */

